<resources>
    <string name="app_name">Parola Yöneticisi</string>
    <string name="yeni_bir_veritaban_a">Yeni Bir Veritabanı Aç</string>
    <string name="d_ar_dan_veritaban_a">Dışarıdan Veritabanı Aç</string>
    <string name="todo">TODO</string>
    <string name="mevcut_veritabanlar">Mevcut Veritabanları</string>
    <string name="app_con">App İcon</string>
    <string name="dbname">DBNAME</string>
    <string name="yeni_veritaban_olu_t_r">Yeni Veritabanı Oluştır</string>
    <string name="yeni_veri_taban_olu_tur">Yeni Veri Tabanı Oluştur</string>
    <string name="veritaban_ad">Veritabanı Adı</string>
    <string name="ifre">Şifre</string>
    <string name="ifre_tekrar">Şifre Tekrar</string>
    <string name="olu_tur">Oluştur</string>
    <string name="veritaban_giri_ekran">Veritabanı Giriş Ekranı</string>
    <string name="giri">Giriş</string>
    <string name="parola">Parola</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="veritaban">Veritabanı</string>
    <string name="textview">TextView</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="g_ncelle">Güncelle</string>
    <string name="sil">Sil</string>
    <string name="kopyala">Kopyala</string>
    <string name="hesap_kayd_yok">Hesap Kaydı Yok</string>
    <string name="kay_tl_hesaplar">Kayıtlı Hesaplar</string>
    <string name="rastgele_parola">Rastgele Parola</string>
    <string name="rastegele_parola_ayarlar_n_yeni_hesap_ekleme_sayfas_ndan_de_i_tirebilirsiniz">Rastegele Parola Ayarlarını Yeni Hesap Ekleme Sayfasından Değiştirebilirsiniz</string>
    <string name="yeni_hesap_kay_t">Yeni Hesap Kayıt</string>
    <string name="ekle">Ekle</string>
    <string name="ifre_olu_tur">Şifre Oluştur</string>
    <string name="ifre_olu_turma_ayarlar">Şifre Oluşturma Ayarları</string>
    <string name="t_m_alfabe_a_z">Tüm Alfabe (A-Z)</string>
    <string name="rakamalar_0_9">Rakamalar (0-9)</string>
    <string name="semboller">Semboller (?,#@..)</string>
    <string name="t_rk_e_karakterler">Türkçe Karakterler</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="veritaban_n_d_ar_aktar">Veritabanını Dışarı Aktar</string>
    <string name="aktar">Aktar</string>
    <string name="veritaban_parolas_n_de_i_tir">Veritabanı Parolasını Değiştir</string>
    <string name="eski_parola">Eski Parola</string>
    <string name="yeni_parola">Yeni Parola</string>
    <string name="yeni_parola_tekrar">Yeni Parola (Tekrar)</string>
    <string name="de_i_tir">Değiştir</string>
    <string name="veritaban_n_sil">Veritabanını Sil</string>
    <string name="parola_uzunlugu">Parola Uzunlugu</string>
</resources>