<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/veritaban_giri_ekran"
        android:textColor="@color/logo_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDBPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="@+id/tvLoginTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
        android:autofillHints="@string/parola" />

    <Button
        android:id="@+id/btnDBLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_new_db"
        android:padding="5dp"
        android:text="@string/giri"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/etDBPassword"
        app:layout_constraintTop_toBottomOf="@+id/etDBPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>