<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvNewDBTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/yeni_veri_taban_olu_tur"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDbName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/veritaban_ad"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etDBName" />

    <EditText
        android:id="@+id/etDBName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/veritaban_ad"
        android:ems="10"
        android:hint="@string/veritaban_ad"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDbName"
        app:layout_constraintTop_toBottomOf="@+id/tvNewDBTitle" />

    <TextView
        android:id="@+id/tvDBPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ifre"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDbName"
        app:layout_constraintTop_toTopOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/ifre"
        android:ems="10"
        android:hint="@string/ifre"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etDBName"
        app:layout_constraintStart_toStartOf="@+id/etDBName"
        app:layout_constraintTop_toBottomOf="@+id/etDBName" />

    <EditText
        android:id="@+id/etPasswordControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/ifre_tekrar"
        android:ems="10"
        android:hint="@string/ifre_tekrar"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvPasswordControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ifre_tekrar"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDBPassword"
        app:layout_constraintTop_toTopOf="@+id/etPasswordControl" />

    <Button
        android:id="@+id/btnCreateNewDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_new_db"
        android:text="@string/olu_tur"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordControl" />

</androidx.constraintlayout.widget.ConstraintLayout>