<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogoHome"
        android:layout_width="208dp"
        android:layout_height="181dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_con"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_asset_logo" />

    <Button
        android:id="@+id/btnNewDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_home_style"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="openNewDbScreen"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/yeni_bir_veritaban_a"
        android:textAllCaps="false"
        android:textColor="#D2FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogoHome"
        app:layout_constraintStart_toStartOf="@+id/imgLogoHome"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoHome" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-4281947210190697/4846571107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOpenDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_home_style"
        android:fontFamily="sans-serif-light"
        android:onClick="showChooser"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/d_ar_dan_veritaban_a"
        android:textAllCaps="false"
        android:textColor="#D2FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnNewDb"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/btnNewDb"
        app:layout_constraintTop_toBottomOf="@+id/btnNewDb" />

    <TextView
        android:id="@+id/tv_TitleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/mevcut_veritabanlar"
        android:textColor="#DC3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lvAllDb"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenDb" />

    <ListView
        android:id="@+id/lvAllDb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleList"
        app:layout_constraintVertical_bias="0.0">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>